5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4132/executions/1800_2566.log
== TEST (2019-06-12 13:41:19) 
-- CODE:
v = array(eval(input("Digite: ")))

x = zeros(6,dtype=int)
aux = array[2,3,4,5,6,7]
acum=0

for i in range(size(aux)):
	for j in range(size(v)):
		if(v[j]==aux[i]):
			acum+=1
		acum = acum*100/size(v)
		x[i]=acum

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    v = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:42:23) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))

x = zeros(6,dtype=int)
aux = array[2,3,4,5,6,7]
acum=0

for i in range(size(aux)):
	for j in range(size(v)):
		if(v[j]==aux[i]):
			acum+=1
		acum = acum*100/size(v)
		x[i]=acum

-- EXECUTION TIME:
0.899285
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2566/main.py", line 5, in <module>
    aux = array[2,3,4,5,6,7]
TypeError: 'builtin_function_or_method' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:42:36) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))

x = zeros(6,dtype=int)
aux = array[2,3,4,5,6,7]
acum=0

for i in range(size(aux)):
	for j in range(size(v)):
		if(v[j]==aux[i]):
			acum+=1
		acum = acum*100/size(v)
		x[i]=acum
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:44:02) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))

x = zeros(6,dtype=int)
aux = array([2,3,4,5,6,7])
acum=0

for i in range(size(aux)):
	for j in range(size(v)):
		if(v[j]==aux[i]):
			acum+=1
		acum = acum*100/size(v)
		x[i]=acum
		acum=0
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:49:32) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))

x = zeros(6,dtype=int)
aux = array([2,3,4,5,6,7])
acum=0

for i in range(size(aux)):
	for j in range(size(v)):
		if(v[j]==aux[i]):
			acum+=1
	acum = acum*100/size(v)
	x[i]=acum
	acum=0
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:49:50) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))

x = zeros(6,dtype=float)
aux = array([2,3,4,5,6,7])
acum=0

for i in range(size(aux)):
	for j in range(size(v)):
		if(v[j]==aux[i]):
			acum+=1
	acum = acum*100/size(v)
	x[i]=acum
	acum=0
print(x)
-- EXECUTION TIME:
0.924262
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.75  0.    0.   18.75 25.   37.5 ]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.38461538  7.69230769 23.07692308  7.69230769 15.38461538 30.76923077]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:49:55) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))

x = zeros(6,dtype=float)
aux = array([2,3,4,5,6,7])
acum=0

for i in range(size(aux)):
	for j in range(size(v)):
		if(v[j]==aux[i]):
			acum+=1
	acum = acum*100/size(v)
	x[i]=acum
	acum=0
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:50:11) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))

x = zeros(6,dtype=int)
aux = array([2,3,4,5,6,7])
acum=0

for i in range(size(aux)):
	for j in range(size(v)):
		if(v[j]==aux[i]):
			acum+=1
	acum = acum*100/size(v)
	x[i]=acum
	acum=0
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:50:44) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))

x = zeros(6,dtype=int)
aux = array([2,3,4,5,6,7])
acum=0

for i in range(size(aux)):
	for j in range(size(v)):
		if(v[j]==aux[i]):
			acum+=1
	acum = acum*100/size(v)
	x[i]=acum*1.0
	acum=0
print(x)
-- EXECUTION TIME:
0.842869
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18  0  0 18 25 37]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4  8 16 20 20 32]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15  7 23  7 15 30]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:50:45) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))

x = zeros(6,dtype=int)
aux = array([2,3,4,5,6,7])
acum=0

for i in range(size(aux)):
	for j in range(size(v)):
		if(v[j]==aux[i]):
			acum+=1
	acum = acum*100/size(v)
	x[i]=acum*1.0
	acum=0
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:51:05) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))

x = zeros(6,dtype=int)
aux = array([2,3,4,5,6,7])
acum=0.0

for i in range(size(aux)):
	for j in range(size(v)):
		if(v[j]==aux[i]):
			acum+=1
	acum = acum*100.0/size(v)
	x[i]=acum*1.0
	acum=0.0
print(x)
-- EXECUTION TIME:
1.15257
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18  0  0 18 25 37]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
Digite: [ 4  8 16 20 20 32]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
Digite: [15  7 23  7 15 30]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:51:06) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))

x = zeros(6,dtype=int)
aux = array([2,3,4,5,6,7])
acum=0.0

for i in range(size(aux)):
	for j in range(size(v)):
		if(v[j]==aux[i]):
			acum+=1
	acum = acum*100.0/size(v)
	x[i]=acum*1.0
	acum=0.0
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:51:47) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))

x = zeros(6,dtype=int)
aux = array([2,3,4,5,6,7])
acum=0

for i in range(size(aux)):
	for j in range(size(v)):
		if(v[j]==aux[i]):
			acum+=1
	acum = acum*100/size(v)
	x[i]=acum*
	acum=0.0
print(round(x,1))
-- ERROR:
File "XXXX", line 13
    x[i]=acum*
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:51:51) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))

x = zeros(6,dtype=int)
aux = array([2,3,4,5,6,7])
acum=0

for i in range(size(aux)):
	for j in range(size(v)):
		if(v[j]==aux[i]):
			acum+=1
	acum = acum*100/size(v)
	x[i]=acum
	acum=0.0
print(round(x,1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:52:31) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))

x = zeros(6,dtype=int)
aux = array([2,3,4,5,6,7])
acum=0

for i in range(size(aux)):
	for j in range(size(v)):
		if(v[j]==aux[i]):
			acum+=1
	acum = round(acum*100/size(v),1)
	x[i]=acum
	acum=0.0
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:52:55) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))

x = zeros(6,dtype=float)
aux = array([2,3,4,5,6,7])
acum=0

for i in range(size(aux)):
	for j in range(size(v)):
		if(v[j]==aux[i]):
			acum+=1
	acum = acum*100/size(v)
	x[i]=acum
	acum=0.0
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:53:04) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))

x = zeros(6,dtype=float)
aux = array([2,3,4,5,6,7])
acum=0

for i in range(size(aux)):
	for j in range(size(v)):
		if(v[j]==aux[i]):
			acum+=1
	acum = acum*100/size(v)
	x[i]=acum
	acum=0.0
print(x)
-- EXECUTION TIME:
0.929782
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.75  0.    0.   18.75 25.   37.5 ]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.38461538  7.69230769 23.07692308  7.69230769 15.38461538 30.76923077]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:53:23) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))

x = zeros(6,dtype=float)
aux = array([2,3,4,5,6,7])
acum=0

for i in range(size(aux)):
	for j in range(size(v)):
		if(v[j]==aux[i]):
			acum+=1
	acum = acum*100/size(v)
	x[i]=acum
	acum=0.0
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:53:35) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))

x = zeros(6,dtype=float)
aux = array([2,3,4,5,6,7])
acum=0

for i in range(size(aux)):
	for j in range(size(v)):
		if(v[j]==aux[i]):
			acum+=1
	acum = acum*100/size(v)
	x[i]=acum
	acum=0.0
print(x)
-- EXECUTION TIME:
1.21613
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.75  0.    0.   18.75 25.   37.5 ]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.38461538  7.69230769 23.07692308  7.69230769 15.38461538 30.76923077]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:53:56) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))

x = zeros(6,dtype=float)
aux = array([2,3,4,5,6,7])
acum=0

for i in range(size(aux)):
	for j in range(size(v)):
		if(v[j]==aux[i]):
			acum+=1
	acum = acum*100/size(v)
	x[i]=acum
	acum=0
print(x)
-- EXECUTION TIME:
1.17921
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.75  0.    0.   18.75 25.   37.5 ]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
Digite: [ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
Digite: [15.38461538  7.69230769 23.07692308  7.69230769 15.38461538 30.76923077]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:53:58) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))

x = zeros(6,dtype=float)
aux = array([2,3,4,5,6,7])
acum=0

for i in range(size(aux)):
	for j in range(size(v)):
		if(v[j]==aux[i]):
			acum+=1
	acum = acum*100/size(v)
	x[i]=acum
	acum=0
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:54:09) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))

x = zeros(6,dtype=float)
aux = array([2,3,4,5,6,7])
acum=0

for i in range(size(aux)):
	for j in range(size(v)):
		if(v[j]==aux[i]):
			acum+=1
	acum = acum*100/size(v)
	x[i]=acum
	acum=0
print(x)
-- EXECUTION TIME:
0.952806
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.75  0.    0.   18.75 25.   37.5 ]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.38461538  7.69230769 23.07692308  7.69230769 15.38461538 30.76923077]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:55:25) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))

x = zeros(6,dtype=int)
aux = array([2,3,4,5,6,7])
acum=0

for i in range(size(aux)):
	for j in range(size(v)):
		if(v[j]==aux[i]):
			acum+=1
	acum = acum*100/size(v)
	x[i]=acum
	acum=0
for k in range(size(x))
	x[i]= round(x[i],1)
print(x)
-- ERROR:
File "XXXX", line 15
    for k in range(size(x))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:55:35) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))

x = zeros(6,dtype=int)
aux = array([2,3,4,5,6,7])
acum=0

for i in range(size(aux)):
	for j in range(size(v)):
		if(v[j]==aux[i]):
			acum+=1
	acum = acum*100/size(v)
	x[i]=acum
	acum=0
for k in range(size(x)):
	x[i]= round(x[i],1)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:34:55) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))

x = zeros(6,dtype=int)
aux = array([2.0,3.0,4.0,5.0,6.0,7.0])
acum=0

for i in range(size(aux)):
	for j in range(size(v)):
		if(v[j]==aux[i]):
			acum+=1.0
	acum = acum*100.0/size(v)
	x[i]=acum
	acum=0
for k in range(size(x)):
	x[i]= round(x[i],1)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:36:23) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))

x = zeros(6,dtype=int)
aux = array([2.0,3.0,4.0,5.0,6.0,7.0])
acum=0

for i in range(size(aux)):
	for j in range(size(v)):
		if(v[j]==aux[i]):
			acum+=1.0
	acum = acum*100.0/size(v)
	x[i]=acum
	acum=0
for k in range(size(x)):
	x[k]= round(x[k],1)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:37:54) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))

x = zeros(6,dtype=int)
aux = array([2.0,3.0,4.0,5.0,6.0,7.0])
acum=0

for i in range(size(aux)):
	for j in range(size(v)):
		if(v[j]==aux[i]):
			acum+=1
	acum = acum*100/size(v)
	x[i]=acum
	acum=0
for k in range(size(x)):
	x[k]= round(x[k],2)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:38:40) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))

x = zeros(6,dtype=int)
aux = array([2.0,3.0,4.0,5.0,6.0,7.0])
acum=0

for i in range(size(aux)):
	for j in range(size(v)):
		if(v[j]==aux[i]):
			acum+=1
	acum = acum*100/size(v)
	x[i]=acum
	acum=0
for k in range(size(x)):
	x[k]= round(x[k],2)
	printx("x")
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:38:52) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))

x = zeros(6,dtype=int)
aux = array([2.0,3.0,4.0,5.0,6.0,7.0])
acum=0

for i in range(size(aux)):
	for j in range(size(v)):
		if(v[j]==aux[i]):
			acum+=1
	acum = acum*100/size(v)
	x[i]=acum
	acum=0
for k in range(size(x)):
	x[k]= round(x[k],2)
	print("x")
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:40:34) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))

x = zeros(6,dtype=int)
aux = array([2.0,3.0,4.0,5.0,6.0,7.0])
acum=0

for i in range(size(aux)):
	for j in range(size(v)):
		if(v[j]==aux[i]):
			acum+=1
	acum = acum*100/size(v)
	x[i]=acum
	acum=0
x[0]= round(x[0],1)
x[1]= round(x[1],1)
x[2]= round(x[2],1)
x[3]= round(x[3],1)
x[4]= round(x[4],1)
x[5]= round(x[5],1)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 07:42:40) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))

x = zeros(6,dtype=int)
aux = array([2.0,3.0,4.0,5.0,6.0,7.0])
acum=0

for i in range(size(aux)):
	for j in range(size(v)):
		if(v[j]==aux[i]):
			acum+=1
	acum = acum*100/size(v)
	x[i]=acum
	acum=0
x[0]= round(x[0],1)
x[1]= round(x[1],1)
x[2]= round(x[2],1)
x[3]= round(x[3],1)
x[4]= round(x[4],1)
x[5]= round(x[5],1)
print(x)
-- EXECUTION TIME:
1.19799
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18  0  0 18 25 37]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4  8 16 20 20 32]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15  7 23  7 15 30]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:44:53) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))

x = zeros(6,dtype=int)
aux = array([2.0,3.0,4.0,5.0,6.0,7.0])
acum=0

for i in range(size(aux)):
	for j in range(size(v)):
		if(float(v[j])==aux[i]):
			acum+=1
	acum = acum*100/size(v)
	x[i]=float(acum)
	acum=0
x[0]= round(x[0],1)
x[1]= round(x[1],1)
x[2]= round(x[2],1)
x[3]= round(x[3],1)
x[4]= round(x[4],1)
x[5]= round(x[5],1)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:45:21) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))

x = zeros(6,dtype=float)
aux = array([2.0,3.0,4.0,5.0,6.0,7.0])
acum=0

for i in range(size(aux)):
	for j in range(size(v)):
		if(float(v[j])==aux[i]):
			acum+=1
	acum = acum*100/size(v)
	x[i]=float(acum)
	acum=0
x[0]= round(x[0],1)
x[1]= round(x[1],1)
x[2]= round(x[2],1)
x[3]= round(x[3],1)
x[4]= round(x[4],1)
x[5]= round(x[5],1)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 07:45:33) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))

x = zeros(6,dtype=float)
aux = array([2.0,3.0,4.0,5.0,6.0,7.0])
acum=0

for i in range(size(aux)):
	for j in range(size(v)):
		if(float(v[j])==aux[i]):
			acum+=1
	acum = acum*100/size(v)
	x[i]=float(acum)
	acum=0
x[0]= round(x[0],1)
x[1]= round(x[1],1)
x[2]= round(x[2],1)
x[3]= round(x[3],1)
x[4]= round(x[4],1)
x[5]= round(x[5],1)
print(x)
-- EXECUTION TIME:
1.04877
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 25.  37.5]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.4  7.7 23.1  7.7 15.4 30.8]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
